Website generation with Couscous

--- a/contributing.html
+++ b/contributing.html
@@ -176,6 +176,14 @@ everything will be updated as soon as possible.</p>
 <p>No test should fail.</p>
 <p>You can tweak the PHPUnit's settings by copying <code>phpunit.xml.dist</code> to <code>phpunit.xml</code>
 and changing it according to your needs.</p>
+<hr />
+<p>See also:</p>
+<ul>
+<li><a href="docs/index.html">Feature Guide</a></li>
+<li><a href="docs/install.html">Installation</a></li>
+<li><a href="license.html">License</a></li>
+<li><a href="docs/validators.html">Validators</a></li>
+</ul>
                     <div id="go-top">
                         <hr />
                         <p>
