--- a/license.html
+++ b/license.html
@@ -100,6 +100,14 @@ LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
 ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+<hr />
+<p>See also:</p>
+<ul>
+<li><a href="contributing.html">Contributing</a></li>
+<li><a href="docs/index.html">Feature Guide</a></li>
+<li><a href="docs/install.html">Installation</a></li>
+<li><a href="docs/validators.html">Validators</a></li>
+</ul>
                     <div id="go-top">
                         <hr />
                         <p>
