Website generation with Couscous

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 <li><a href="docs/index.html#validation-methods">Granularity control</a> for advanced reporting.</li>
 <li>Almost 100 (fully tested) validators.</li>
 <li><a href="docs/concrete_api.html">A concrete API</a> for non fluent usage.</li>
+<li>Works on PHP 5.3+ or HHVM 3.3+</li>
 </ul>
 <h2 id="table-of-contents">Table of contents</h2>
 <ul>
